--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <title>Atalhos do Sucesso</title>
   <link rel="stylesheet" href="assets/material-design/css/material-icons.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -67,7 +66,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="material material-airplay mbr-iconfont mbr-iconfont-btn"></span>HOME</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>SERVIÇOS</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="page7.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>CLIENTES</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="http://joliver.liquidbook.com.br/atalhos-do-sucesso" aria-expanded="false">J. Oliver</a><a class="text-white dropdown-item display-4" href="http://anthero.liquidbook.com.br/estrada-iluminada" aria-expanded="false">Anthero Sarmento</a><a class="text-white dropdown-item display-4" href="http://amaury.liquidbook.com.br/os-10-viajantes" aria-expanded="false">Amaury de Mattos</a><a class="text-white dropdown-item display-4" href="http://valmir.liquidbook.com.br/dialogos-para-santos-cegos" aria-expanded="false">Valmir Moratelli</a><a class="text-white dropdown-item display-4" href="http://tomazeli.liquidbook.com.br/evoluir" aria-expanded="false">Caio Tomazeli</a><a class="text-white dropdown-item display-4" href="http://lara.liquidbook.com.br/" aria-expanded="false">Lara de Lemos</a><a class="text-white dropdown-item display-4" href="http://gallina.liquidbook.com.br/rebeka" aria-expanded="false">Sérgio Gallina</a><a class="text-white dropdown-item display-4" href="http://cintiah.liquidbook.com.br/manual-de-etiqueta" aria-expanded="false">Cintiah Meneghetti</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="http://blog.liquidbook.com.br"><span class="mbrib-bold mbr-iconfont mbr-iconfont-btn"></span>BLOG</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="material material-airplay mbr-iconfont mbr-iconfont-btn"></span>HOME</a></li></ul>
             
         </div>
     </nav>
@@ -86,7 +85,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
                 Adquira seu exemplar</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Neste livro o autor compartilha sua FÓRMULA de sucesso, aprendida ao longo de quase trinta anos no ramo de entretenimento de bares e restaurantes. Entremeando ensinamentos práticos com instigantes experiências de VIDA, Oliver revela ao leitor como este pode alcançar conquistas materiais sem abrir mão da FELICIDADE espiritual.</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-info display-5" href="https://pag.ae/7UwRPNrYJ" target="_blank">Adquirir</a> <a class="btn btn-md btn-white display-5" href="/atalhos-do-sucesso/lead-atalhos-do-sucesso.html">E-book gratuito</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-info display-5" href="https://pag.ae/7UwRPNrYJ" target="_blank">Adquirir</a> <a class="btn btn-md btn-white display-5" href="/lead-atalhos-do-sucesso.html">E-book gratuito</a></div>
         </div>
     </div>
 
@@ -207,7 +206,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Obrigado pelo contato, em seguida retornamos! :)</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a69dKvkPlvjzH0XJqF8aN3eCWYU3V9DLAlTg/JRlyv+wIQw6tev35bTX3aATzzTEDgVVHPI5n7D76ZGVARQkqqlvo/ShlGoV3+d+xxWQepaO+lmPl+7OF2K+7ym1f783">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Itqk42DOzVdlkWnHruKNyUtKeRV4AECNdyw/ltxh10zReJcfsqtvTiCoJJFR8QHMUjEm1NXd1ETAfVl5/F42lVtsa7yftCdYWndYhy4IWcqHDbd8aPw/Jy35u4140loz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -288,14 +287,14 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
