--- a/lead-atalhos-do-sucesso.html
+++ b/lead-atalhos-do-sucesso.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="material material-airplay mbr-iconfont mbr-iconfont-btn"></span>HOME</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="http://www.liquidbook.com.br"><span class="material material-airplay mbr-iconfont mbr-iconfont-btn"></span>HOME</a></li></ul>
             
         </div>
     </nav>
@@ -90,7 +90,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Em breve acesse seu e-mail onde receberá o link para baixar o e-book :)</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z1HGhA+2n0ClD7waK4Q9AtLLZCwgUp233vEn4TLTWL1/yLMEZwSOqI+4z1jLjzkdFEpr75vmnii/mJQX9Uvfwh+4weuyYcDo/cuU1y7bJy8s2kNq5gjbomysNqcUp8zs">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CqCiyIg64or1gydKZZNrEa3Csze2PdE2vGRb8zkvJm2vjh0aID23xzcEQpQymuV++LQULX469ucbt/BoLuWoOsggONdtsgXHmBYHHU2kS4JwEdm+nVBabX6OjIR61rxC">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Nome" required="" id="name-header15-3p">
