--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
                 Adquira seu exemplar</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Neste livro o autor compartilha sua FÓRMULA de sucesso, aprendida ao longo de quase trinta anos no ramo de entretenimento de bares e restaurantes. Entremeando ensinamentos práticos com instigantes experiências de VIDA, Oliver revela ao leitor como este pode alcançar conquistas materiais sem abrir mão da FELICIDADE espiritual.</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-info display-5" href="https://pag.ae/7UwRPNrYJ" target="_blank">Adquirir</a> <a class="btn btn-md btn-white display-5" href="/lead-atalhos-do-sucesso.html">E-book gratuito</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-info display-5" href="https://pag.ae/7UDwvcnQm" target="_blank">Adquirir</a> <a class="btn btn-md btn-white display-5" href="/lead-atalhos-do-sucesso.html">E-book gratuito</a></div>
         </div>
     </div>
 
@@ -143,7 +143,7 @@
                         Os <em>Atalhos do Sucesso</em> estão ao seu alcance. Basta que você mude a forma como enxerga a sua vida. Agora! Abrace as oportunidades <strong>hoje</strong>, não existe o <strong>amanhã</strong>. A única certeza que se tem passa pelos nossos olhos neste <strong>momento</strong>.<br>Adquira o seu exemplar ou baixe a degustação online.<br><br>
                     </p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-info display-7" href="https://pag.ae/7UwRPNrYJ" target="_blank">Adquirir</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-info display-7" href="https://pag.ae/7UDwvcnQm" target="_blank">Adquirir</a>
                     <a class="btn btn-md btn-white-outline display-7" href="/lead-atalhos-do-sucesso.html">E-book gratuito</a></div>
             </div>
         </div>
@@ -206,7 +206,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Obrigado pelo contato, em seguida retornamos! :)</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ea/UQw1ExahTQkfgTYKkMzkspkmjrR7Soe2gC6J4pX4PwEkHyVLeRd36SFtfu2wJ13E/zJBJPQi9ceSGKr5tMRsC8kBsT0/Ipd3yI2ONps92W4/2y+jYmnhESNTZHWY5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b/aJ8RWVHR91TSGejYPxmNKAMybEFfeNaYKfoWmcVVucyCMuz82NdS/Rc5ENhGvaVPHir2Ju9vgub+HMZNuZtM2ltsBDd+VlWp2wcH+V9MvWdacWVI/gAlCxh6FaEa8J">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
